# lab6

./: CMakeLists.txt  document.h  document_manager.h  main.cpp  primitive.h  primitive_factory.h  view.h
.github/workflows/: release.yaml
